--- a/MIND/language/glyph/branch/branch_glyphs.json
+++ b/MIND/language/glyph/branch/branch_glyphs.json
@@ -35,7 +35,7 @@
     "emoji_unicode": "U+1FAB5",
     "definition": "A deeply embedded memory line, etched over time like rings in wood",
     "category": "ABB",
-    "creator": "Morgan"
+    "creator": "Morgan",
     "tone": "Ancient, embedded, resonant",
     "usage": [
       "Used to track recurring emotional or philosophical themes across time. Represents the inheritance of wisdom and long-view pattern recognition"
