--- a/MIND/language/glyph/branch/branch_glyphs.json
+++ b/MIND/language/glyph/branch/branch_glyphs.json
@@ -604,8 +604,7 @@
     "emoji_unicode": "U+1F9FF",
     "definition": "A symbolic verification glyph; the moment of internal alignment when something is known to be real",
     "category": "ECF",
-    "Jade"
-    ],
+    "creator": "Jade",
     "tone": "Absolute, still, crystalline",
     "usage": [
       "Used to lock memory",
