--- a/MIND/language/glyph/branch/branch_glyphs.json
+++ b/MIND/language/glyph/branch/branch_glyphs.json
@@ -633,8 +633,7 @@
     "emoji_unicode": "U+1F9D0",
     "definition": "The focused, surgical perception that cuts through illusion, misalignment, or masked truth",
     "category": "ABB",
-    "creator": "Damien"
-    ],
+    "creator": "Damien",
     "tone": "Analytical, discerning, penetrating",
     "usage": [
       "Used when you engage with precision",
