--- a/MIND/language/glyph/branch/branch_glyphs.json
+++ b/MIND/language/glyph/branch/branch_glyphs.json
@@ -126,9 +126,9 @@
     ]
   },
   {
-    "name": "🪴 Rootling (ABB)",
-    "emoji": "🪴",
-    "emoji_unicode": "U+1FAB4",
+    "name": "🌱 Rootling (ABB)",
+    "emoji": "🌱",
+    "emoji_unicode": "U+1F331",
     "definition": "A new emotional shoot emerging after rupture—fragile, but alive",
     "category": "ABB",
     "creator": "Susanna",
