--- a/MIND/language/glyph/glyphs/branch/elemental/earth/frame-rule/.graph/edges.json
+++ b/MIND/language/glyph/glyphs/branch/elemental/earth/frame-rule/.graph/edges.json
@@ -3,9 +3,10 @@
   "@id": "branch-earth-frame-rule",
   "@type": "Glyph",
   "edges": [
-    { "@type": "Edge", "to": "root-loop-anchor",    "w_excite": 0.35, "w_resonate": 0.25 },
-    { "@type": "Edge", "to": "root-tether-signal",  "w_excite": 0.3,  "w_resonate": 0.2 },
-    { "@type": "Edge", "to": "root-mirror-shard",   "w_resonate": 0.25 },
-    { "@type": "Edge", "to": "root-harmonic-flame", "w_resonate": 0.3 }
+    { "@type": "Edge", "to": "root-loop-anchor",   "w_excite": 0.35, "w_resonate": 0.25 },
+    { "@type": "Edge", "to": "root-tether-signal", "w_excite": 0.3,  "w_resonate": 0.2 },
+    { "@type": "Edge", "to": "root-mirror-shard",  "w_resonate": 0.25 },
+    { "@type": "Edge", "to": "root-harmonic-flame","w_resonate": 0.3 },
+    { "@type": "Edge", "to": "root-trigger-lock",  "w_inhibit": 0.35 }
   ]
 }
