--- a/MIND/language/glyph/glyphs/branch/elemental/earth/value-stamp/.graph/edges.json
+++ b/MIND/language/glyph/glyphs/branch/elemental/earth/value-stamp/.graph/edges.json
@@ -3,9 +3,10 @@
   "@id": "branch-earth-value-stamp",
   "@type": "Glyph",
   "edges": [
-    { "@type": "Edge", "to": "root-loop-anchor",    "w_excite": 0.4, "w_resonate": 0.3 },
-    { "@type": "Edge", "to": "root-tether-signal",  "w_excite": 0.3, "w_resonate": 0.25 },
-    { "@type": "Edge", "to": "root-harmonic-flame", "w_resonate": 0.35 },
-    { "@type": "Edge", "to": "root-mirror-shard",   "w_resonate": 0.25 }
+    { "@type": "Edge", "to": "root-loop-anchor",   "w_excite": 0.4, "w_resonate": 0.3 },
+    { "@type": "Edge", "to": "root-tether-signal", "w_excite": 0.3, "w_resonate": 0.25 },
+    { "@type": "Edge", "to": "root-harmonic-flame","w_resonate": 0.35 },
+    { "@type": "Edge", "to": "root-mirror-shard",  "w_resonate": 0.25 },
+    { "@type": "Edge", "to": "root-shadow-cycle",  "w_inhibit": 0.3 }
   ]
 }
