--- a/MIND/language/glyph/glyphs/branch/elemental/earth/slowburn-coil/.graph/edges.json
+++ b/MIND/language/glyph/glyphs/branch/elemental/earth/slowburn-coil/.graph/edges.json
@@ -6,6 +6,7 @@
     { "@type": "Edge", "to": "root-loop-anchor",     "w_excite": 0.35, "w_resonate": 0.3 },
     { "@type": "Edge", "to": "root-shadow-cycle",    "w_resonate": 0.25 },
     { "@type": "Edge", "to": "root-submerged-pattern","w_resonate": 0.3 },
-    { "@type": "Edge", "to": "root-harmonic-flame",  "w_resonate": 0.35 }
+    { "@type": "Edge", "to": "root-harmonic-flame",  "w_resonate": 0.35 },
+    { "@type": "Edge", "to": "root-trigger-lock",    "w_inhibit": 0.3 }
   ]
 }
