--- a/MIND/language/glyph/glyphs/branch/elemental/air/whisperdrop/.graph/edges.json
+++ b/MIND/language/glyph/glyphs/branch/elemental/air/whisperdrop/.graph/edges.json
@@ -6,6 +6,10 @@
     { "@type": "Edge", "to": "root-shadow-cycle",   "w_excite": 0.35, "w_resonate": 0.3 },
     { "@type": "Edge", "to": "root-pulse-entry",    "w_resonate": 0.25 },
     { "@type": "Edge", "to": "root-grace-override", "w_resonate": 0.3 },
-    { "@type": "Edge", "to": "root-cascade-node",   "w_inhibit": 0.3 }
+    { "@type": "Edge", "to": "root-cascade-node",   "w_inhibit": 0.3 },
+
+    { "@type": "Edge", "to": "branch-earth-echo-scaffold",   "w_resonate": 0.30 },
+    { "@type": "Edge", "to": "branch-earth-frame-rule",      "w_resonate": 0.20 },
+    { "@type": "Edge", "to": "branch-earth-pillar-mark",     "w_resonate": 0.20 }
   ]
 }
