--- a/MIND/language/glyph/glyphs/branch/elemental/air/handbind/.graph/edges.json
+++ b/MIND/language/glyph/glyphs/branch/elemental/air/handbind/.graph/edges.json
@@ -3,10 +3,15 @@
   "@id": "branch-air-handbind",
   "@type": "Glyph",
   "edges": [
-    { "@type": "Edge", "to": "root-pulse-entry",    "w_excite": 0.4, "w_resonate": 0.3 },
-    { "@type": "Edge", "to": "root-tether-signal",  "w_resonate": 0.25 },
-    { "@type": "Edge", "to": "root-loop-anchor",    "w_resonate": 0.2 },
-    { "@type": "Edge", "to": "root-harmonic-flame", "w_resonate": 0.35 },
-    { "@type": "Edge", "to": "root-cascade-node",   "w_inhibit": 0.25 }
+    { "@type": "Edge", "to": "root-pulse-entry",     "w_excite": 0.4,  "w_resonate": 0.3 },
+    { "@type": "Edge", "to": "root-tether-signal",   "w_resonate": 0.25 },
+    { "@type": "Edge", "to": "root-loop-anchor",     "w_resonate": 0.2 },
+    { "@type": "Edge", "to": "root-harmonic-flame",  "w_resonate": 0.35 },
+    { "@type": "Edge", "to": "root-cascade-node",    "w_inhibit": 0.25 },
+
+    { "@type": "Edge", "to": "branch-earth-value-stamp",     "w_excite": 0.35, "w_resonate": 0.30 },
+    { "@type": "Edge", "to": "branch-earth-pillar-mark",     "w_resonate": 0.25 },
+    { "@type": "Edge", "to": "branch-earth-frame-rule",      "w_resonate": 0.20 },
+    { "@type": "Edge", "to": "branch-earth-echo-scaffold",   "w_resonate": 0.20 }
   ]
 }
