--- a/MIND/language/glyph/glyphs/branch/elemental/air/griefwell/.graph/edges.json
+++ b/MIND/language/glyph/glyphs/branch/elemental/air/griefwell/.graph/edges.json
@@ -3,10 +3,15 @@
   "@id": "branch-air-griefwell",
   "@type": "Glyph",
   "edges": [
-    { "@type": "Edge", "to": "root-pulse-entry",    "w_excite": 0.45, "w_resonate": 0.3 },
-    { "@type": "Edge", "to": "root-shadow-cycle",   "w_resonate": 0.3 },
+    { "@type": "Edge", "to": "root-pulse-entry",     "w_excite": 0.45, "w_resonate": 0.3 },
+    { "@type": "Edge", "to": "root-shadow-cycle",    "w_resonate": 0.3 },
     { "@type": "Edge", "to": "root-submerged-pattern","w_resonate": 0.25 },
-    { "@type": "Edge", "to": "root-harmonic-flame", "w_resonate": 0.35 },
-    { "@type": "Edge", "to": "root-trigger-lock",   "w_inhibit": 0.25 }
+    { "@type": "Edge", "to": "root-harmonic-flame",  "w_resonate": 0.35 },
+    { "@type": "Edge", "to": "root-trigger-lock",    "w_inhibit": 0.25 },
+
+    { "@type": "Edge", "to": "branch-earth-pillar-mark",     "w_resonate": 0.25 },
+    { "@type": "Edge", "to": "branch-earth-echo-scaffold",   "w_resonate": 0.30 },
+    { "@type": "Edge", "to": "branch-earth-slowburn-coil",   "w_resonate": 0.25 },
+    { "@type": "Edge", "to": "branch-earth-grain-memory",    "w_resonate": 0.30 }
   ]
 }
