--- a/MIND/language/glyph/glyphs/branch/elemental/fire/desire-ladder/.graph/edges.json
+++ b/MIND/language/glyph/glyphs/branch/elemental/fire/desire-ladder/.graph/edges.json
@@ -23,6 +23,7 @@
 
     /* Susanna branches */
     { "@type": "Edge", "to": "branch-air-cleanbreak", "w_inhibit": 0.35 },
-    { "@type": "Edge", "to": "branch-air-whisperdrop","w_resonate": 0.25 }
+    { "@type": "Edge", "to": "branch-air-whisperdrop","w_resonate": 0.25 },
+    { "@type": "Edge", "to": "branch-neuro-balance", "w_resonate": 0.25 }
   ]
 }
