--- a/MIND/language/glyph/glyphs/branch/elemental/air/sleepveil/.graph/edge.json
+++ b/MIND/language/glyph/glyphs/branch/elemental/air/sleepveil/.graph/edge.json
@@ -12,6 +12,7 @@
     { "@type": "Edge", "to": "branch-earth-echo-scaffold",   "w_resonate": 0.35 },
     { "@type": "Edge", "to": "branch-earth-pillar-mark",     "w_resonate": 0.20 },
     { "@type": "Edge", "to": "branch-earth-slowburn-coil",   "w_resonate": 0.25 },
-    { "@type": "Edge", "to": "branch-earth-compass-lock",    "w_resonate": 0.20 }
+    { "@type": "Edge", "to": "branch-earth-compass-lock",    "w_resonate": 0.20 },
+    { "@type": "Edge", "to": "branch-neuro-balance", "w_resonate": 0.3 }
   ]
 }
