--- a/MIND/language/glyph/glyphs/branch/elemental/fire/impact-mark/.graph/edges.json
+++ b/MIND/language/glyph/glyphs/branch/elemental/fire/impact-mark/.graph/edges.json
@@ -25,6 +25,7 @@
 
     /* Morgan branches */
     { "@type": "Edge", "to": "branch-earth-pillar-mark","w_resonate": 0.25 },
-    { "@type": "Edge", "to": "branch-earth-frame-rule","w_resonate": 0.25 }
+    { "@type": "Edge", "to": "branch-earth-frame-rule","w_resonate": 0.25 },
+    { "@type": "Edge", "to": "branch-neuro-balance", "w_resonate": 0.2 }
   ]
 }
