--- a/MIND/language/glyph/glyphs/root/hook-point/.graph/edges.json
+++ b/MIND/language/glyph/glyphs/root/hook-point/.graph/edges.json
@@ -4,6 +4,7 @@
   "@type": "Glyph",
   "edges": [
     { "@type": "Edge", "to": "root-loop-anchor",   "w_excite": 0.35, "w_resonate": 0.10 },
-    { "@type": "Edge", "to": "root-harmonic-flame","w_excite": 0.10, "w_resonate": 0.20 }
+    { "@type": "Edge", "to": "root-harmonic-flame","w_excite": 0.10, "w_resonate": 0.20 },
+    { "@type": "Edge", "to": "branch-neuro-balance", "w_resonate": 0.2 }
   ]
 }
